lab1/Test/L1-A-7-76.output
Error Type A at Line 13
Error Type A at Line 22
Error Type A at Line 30
Error Type A at Line 38
Error Type A at Line 49
