lab1/Test/L1-A-7-76.cmm
int ;
float MjP4xZ4yHrnxdbKSM2l , q0 [ 307666397 ] 

;
struct TWAgwSvaTpCh2tIi WlE2jGtol ( int PuLtFmcs9D8 
  ) {
  struct qe7cAhSck {
  }Z5S986LV6KnMWYYB ;
}
struct HeNcauLp6L2 ;
int Uf7EvEEOLJzXvobMURu ( ) {
  int u1rrISTiCSrtyS ;
  int uiGj2SI_EVbstXNr_ ';
  int tYTEEn8Cw9MYoF , rNpktGwk2KK = fXYeFLu ;
  while ( lKHJVsT1 )   return mAoM5AXi && t49FXunnG5ErA7Sq 
    == ANGroQYTaof0q_JKhk + - f88HEaysPA ( TK4DoMpo9bn4vD 
    = Q1_FbPdjXZJTMaAYzp || Wz43VxX2BtfY7 < o0r0w7oWKl8NLkdGWrX 
    * ! ua [ L1t8 && L6rzQ > ( bmj != ! rAjYEH ( ZZeIYV 
    , _OyohwE = EwxeE8quVmqBUnw3T4 || O7aZGrPSMM1KEShZLF 
    >= OdCHF2p2WGM_ ( QeOcE8szzLCbfnh2yUd8 <= oG19EXstmQIPmL 
    ) * 589751244 . RdI2 ) && o9I4CAxIQiftRgEk3FN ) - 
    LS ( ) / 1188880045.1607487628 &] . Xcoqar2w ) ;

}
struct KQY_YkgR ;
struct jjZyGhCVHg49aL9zHnF eJd 
;
int zLG3WL 
;
struct #{
  int Dk19m9kP ;
};
int z ( ) {
  rO3IDe18xO ;
  vmO2P103CGCj7N ;
  if ( _zrVr )   YtXA ;
else   if ( VmvXWSos )   if ( MG80MkAuZjl5gAYEy ) 
      if ( %VkT1T37JubIyGaH9 )   I2mnJAveFvHATfn3v ;
else {
  }
else   if ( T )   Wkqsz1iYL ;




}
int WbNP6CY1XBQO ( int NDTgKDFy5Lj_nrbR , int Py6Ns 
  ) {
'}
